# cudnn_lstm

./: .gitignore  CMakeLists.txt  README.md  common.h  lstm.cc  lstm_v8.cc  model.py  util.h
data/: check.py
